# rust-socket-server

./: .balena-sync.yml  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.template  README.md  sync.sh
src/: command.rs  ir.rs  main.rs  motor.rs  motor_handler.rs  pca9685.rs  simple.rs
src/sensors/: arduino.rs  axl.rs  compass.rs  encoder.rs  event.rs  gyro.rs  ir.rs  lidar.rs  mod.rs
