[package]
name = "rover_server"
version = "0.1.0"
authors = ["Leonti Bielski"]

[dependencies]
bufstream = "0.1"
tokio = "0.1.11"
tokio-core = "*"
tokio-io = "*"
tokio-codec = "*"
tokio-serial = "3.0"
futures = "0.1.25"
bytes = "0.4.10"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
i2cdev = "0.4.0"

[dependencies.sysfs_gpio]
version = "0.5.3"
features = ["tokio"]
